Secured dotenv, used MongoClient

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_URI=mongodb+srv://musarratmayeesha:9gftHIhyOH0astZh@tester.ktbwh6k.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb://musarratmayeesha:9gftHIhyOH0astZh@ac-jvd5yu1-shard-00-00.ktbwh6k.mongodb.net:27017,ac-jvd5yu1-shard-00-01.ktbwh6k.mongodb.net:27017,ac-jvd5yu1-shard-00-02.ktbwh6k.mongodb.net:27017/?ssl=true&replicaSet=atlas-ats06j-shard-0&authSource=admin&retryWrites=true&w=majority
 PORT=4000
