Migrated to eas

--- a/app.json
+++ b/app.json
@@ -36,6 +36,12 @@
         "projectId": "0d407dc3-13ba-435d-994b-9043ff7cb733"
       }
     },
-    "owner": "mai_18"
+    "owner": "mai_18",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/0d407dc3-13ba-435d-994b-9043ff7cb733"
+    }
   }
 }
