--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@react-navigation/native-stack": "^6.9.17",
     "cors": "^2.8.5",
     "expo": "~49.0.15",
+    "expo-cli": "^6.3.10",
     "expo-image": "^1.5.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "expo-updates": "~0.18.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
