--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "node": "^21.2.0",
+    "node": "^21.2.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.2"
   }
 }
