--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "expo": "~49.0.15",
     "expo-cli": "^6.3.10",
     "expo-image": "^1.5.1",
+    "expo-linear-gradient": "^12.5.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.18",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "expo-updates": "~0.18.18"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
