--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "cors": "^2.8.5",
     "expo": "~49.0.15",
     "expo-cli": "^6.3.10",
-    "expo-image": "^1.5.1",
-    "expo-linear-gradient": "^12.5.0",
+    "expo-image": "~1.3.5",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.18",
+    "expo-updates": "~0.18.19",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
