--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
+    "mobx-state-tree": "^5.4.0",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
